--- a/frontend/src/pages/Projects/Projects.css
+++ b/frontend/src/pages/Projects/Projects.css
@@ -31,6 +31,11 @@
   font-size: 14px;
 }
 
+.project .add-prject-btn {
+  display: inline-block;
+  margin: 10px;
+}
+
 .project .card img {
   height: 150px;
   width: 100%;
